SERVER-125720: Fix $expr dotted path pushdown to IXSCAN filter (#53692)

Co-authored-by: Niels Lohmann <niels.lohmann@mongodb.com>
GitOrigin-RevId: c2577f0f32277b95204e4990d833bf7d6953e5e4